# axm-core

./: BUILD_SUMMARY.md  EXTENSIONS_REGISTRY.md  IDENTITY.md  INVARIANTS.md  PATCH_APPLICATION_LOG.md  README.md  SPOKE_API.md  axm-roadmap.md  axm_cli.py  demo_query.py  forge_run.py  index.html  integration_test.py  nodal_run.py  pyproject.toml
clarion/: README.md  pyproject.toml
clarion/clarion/: __init__.py  adaptive.py  bundles.py  core.py
cli/: CONTRACT.md
docs/: ARCHITECTURE.md  AUDIT_REPORT.md  AXM-ROADMAP.md  AXM_Compatibility_Test_Procedure.md  DECISION_LOG.md
examples/: query_cross_shard.py
forge/: README.md  pyproject.toml  vendorize_v05.py
forge/axm_forge/chunking/: legal.py  simple.py
forge/axm_forge/cli/: main.py  mount.py  verify.py
forge/axm_forge/coloring/: policy.py
forge/axm_forge/derivation/: __init__.py  confidence.py  coords.py  temporal.py
forge/axm_forge/emission/: genesis_emission.py  shard.py
forge/axm_forge/extraction/: registry.py  schemas.py
forge/axm_forge/extraction/tiers/: tier1_regex.py  tier3_llm.py  tier3_segmenter.py  tier3_stage1.py  tier3_stage2.py
forge/axm_forge/ingestion/: extractors.py  universal.py
forge/axm_forge/models/: claims.py  types.py
forge/axm_forge/routing/: __init__.py  emitter.py  models.py  router.py  signals.py  test_audit_bugs.py  validator.py
forge/inputs/: doc1.txt
forge/scripts/: smoke_tier3.py
genesis/: pyproject.toml
genesis/src/axm_build/: common.py  compiler_generic.py
genesis/src/axm_verify/: const.py  logic.py
genesis/tests/: test_extensions.py
nodalflow/: README.md  index.html  package.json  vite.config.js
nodalflow/src/: App.svelte
nodalflow/src-tauri/: Cargo.toml  tauri.conf.json
nodalflow/src-tauri/src/: main.rs  vault.rs
registry/: SCHEMA.md  __init__.py  artifacts.json  resolve.py  schema.json
scripts/: doctor.py  doctor_tier3.py
spectra/: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
spectra/axiom_runtime/: audit.py  chat.py  clarion.py  db.py  decision_loop.py  diff.py  engine.py  nlquery.py  retrieval.py  server.py  sqlgate.py  transport.py  util.py
spectra/axiom_runtime/constraint/: __init__.py  engine.py  types.py
src/axm_core/: cli.py
tests/: generate_test_pdf.py  test_routing_smoke.py  test_step2.py  test_tier3_pipeline.py
tests/fixtures/: test_native.txt
