[project]
name = "axm-stack"
version = "1.0.0"
description = "AXM monorepo stack: Genesis, Forge, Clarion, Spectra, Nodal Flow"
requires-python = ">=3.11"
dependencies = [
  "blake3>=1.0.0",
  "duckdb>=1.0.0",
  "pyarrow>=14.0.0",
  "pandas>=2.0.0",
  "click>=8.1.0",
  "cryptography>=41.0.0",
  "PyNaCl>=1.5.0",
  "PyMuPDF>=1.23.0",
]
