[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clarion"
version = "2.0.0"
description = "Topology-bound cryptographic transport for AXM knowledge shards"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "graphkdf>=1.0.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
full = [
    "duckdb>=0.9.0",  # For parquet reading
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "duckdb>=0.9.0",
]

[tool.setuptools.packages.find]
include = ["clarion*"]
